Implement the Secure SOME/IP benchmarks
This commit introduces a set of benchmarks that can be used to evaluate
the performance associated with the different security levels provided
by Secure SOME/IP, concerning both the initial authentication handshake
and the run-time protection.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -455,6 +455,17 @@ endif()
 
 
 ##############################################################################
+# Benchmarks section
+##############################################################################
+
+if(BENCH_IP_MASTER AND BENCH_IP_SLAVE)
+    add_custom_target(build_benchmarks)
+    add_subdirectory(benchmarks EXCLUDE_FROM_ALL)
+else()
+    message(WARNING "BENCH_IP_MASTER and/or BENCH_IP_SLAVE not set. Benchmarks cannot be built")
+endif()
+
+##############################################################################
 # Test section
 ##############################################################################
 
